修复聊天的样式

--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatSelfContentCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleMatch/MatchViews/GlodBuleHTChatSelfContentCell.xib
@@ -17,9 +17,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-Qb-IYW" customClass="JXLabel">
-                        <rect key="frame" x="4" y="32" width="272" height="28"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whj-Qb-IYW" customClass="JXLabel">
+                        <rect key="frame" x="275" y="32" width="1" height="28"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="1" id="h1c-5X-zjd"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -69,7 +72,6 @@
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="top" secondItem="rva-BI-H7I" secondAttribute="bottom" constant="4" id="Hap-WQ-IRU"/>
                     <constraint firstItem="spN-hg-q5E" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-2" id="JPd-WE-mu1"/>
                     <constraint firstAttribute="bottom" secondItem="Whj-Qb-IYW" secondAttribute="bottom" constant="4" id="Usi-sz-KzO"/>
-                    <constraint firstItem="Whj-Qb-IYW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="Z53-bQ-Z0V"/>
                     <constraint firstItem="rva-BI-H7I" firstAttribute="trailing" secondItem="spN-hg-q5E" secondAttribute="leading" constant="-6" id="ZRV-pa-mh8"/>
                     <constraint firstItem="Whj-Qb-IYW" firstAttribute="trailing" secondItem="rva-BI-H7I" secondAttribute="trailing" constant="-6" id="gCL-cv-rnC"/>
                     <constraint firstItem="spN-hg-q5E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="jsy-Mi-oRF"/>
