--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleFilm/FilmViews/GlodBuleHTFilmHomeCell.xib
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleFilm/FilmViews/GlodBuleHTFilmHomeCell.xib
@@ -11,18 +11,18 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="GlodBuleHTFilmHomeCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="310"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="310"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVb-xg-1HH">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTr-0I-WbP">
-                        <rect key="frame" x="15" y="10" width="345" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="jajaj基督教啊卡爱了的啊的阿看的卡卡卡点卡开导开导卡卡卡的等" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTr-0I-WbP">
+                        <rect key="frame" x="15" y="10" width="345" height="33.5"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="14" id="tuW-gT-pnh"/>
                         </constraints>
@@ -32,39 +32,39 @@
                         <size key="shadowOffset" width="0.0" height="0.0"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwP-Wg-1xf">
-                        <rect key="frame" x="5" y="42" width="365" height="205.5"/>
+                        <rect key="frame" x="0.0" y="58.5" width="375" height="211"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="rwP-Wg-1xf" secondAttribute="height" multiplier="16:9" id="2G3-tm-oiR"/>
                         </constraints>
                     </view>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_news_time" translatesAutoresizingMaskIntoConstraints="NO" id="vc1-UD-eXl">
-                        <rect key="frame" x="15" y="269.5" width="14" height="14"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_comment_newaa" translatesAutoresizingMaskIntoConstraints="NO" id="vc1-UD-eXl">
+                        <rect key="frame" x="154" y="291.5" width="14" height="14"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="14" id="SZI-pI-vYT"/>
                             <constraint firstAttribute="height" constant="14" id="XoO-On-eQJ"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1小時前" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4k-8c-Iq3">
-                        <rect key="frame" x="34" y="269" width="42.5" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L4k-8c-Iq3">
+                        <rect key="frame" x="173" y="291" width="21" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_news_view" translatesAutoresizingMaskIntoConstraints="NO" id="ZgI-Yn-5bj">
-                        <rect key="frame" x="96.5" y="269.5" width="14" height="14"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_add_collection" translatesAutoresizingMaskIntoConstraints="NO" id="ZgI-Yn-5bj">
+                        <rect key="frame" x="244" y="291.5" width="14" height="14"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="14" id="63o-U7-ZsC"/>
                             <constraint firstAttribute="height" constant="14" id="UXT-I7-FJN"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1061" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="itZ-4i-GUV">
-                        <rect key="frame" x="115.5" y="269" width="26.5" height="15"/>
+                        <rect key="frame" x="263" y="291" width="26.5" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xas-Z2-i4n">
-                        <rect key="frame" x="150" y="261.5" width="64" height="30"/>
+                        <rect key="frame" x="40" y="283.5" width="64" height="30"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yIt-aK-OS3">
                                 <rect key="frame" x="0.0" y="0.0" width="64" height="30"/>
@@ -72,7 +72,7 @@
                                     <action selector="onShareButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="eoR-ya-vn0"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_news_share" translatesAutoresizingMaskIntoConstraints="NO" id="nfM-5L-hh5">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_share_new" translatesAutoresizingMaskIntoConstraints="NO" id="nfM-5L-hh5">
                                 <rect key="frame" x="10" y="8" width="14" height="14"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="14" id="HSB-tC-vV9"/>
@@ -104,20 +104,20 @@
                 <color key="backgroundColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="aVb-xg-1HH" secondAttribute="trailing" id="0lc-Ri-G4G"/>
+                    <constraint firstItem="vc1-UD-eXl" firstAttribute="centerY" secondItem="Xas-Z2-i4n" secondAttribute="centerY" id="AU8-1S-RIf"/>
                     <constraint firstAttribute="bottom" secondItem="aVb-xg-1HH" secondAttribute="bottom" constant="10" id="B6Z-vv-0x1"/>
-                    <constraint firstItem="Xas-Z2-i4n" firstAttribute="centerY" secondItem="itZ-4i-GUV" secondAttribute="centerY" id="Dst-8h-HDW"/>
-                    <constraint firstItem="L4k-8c-Iq3" firstAttribute="centerY" secondItem="vc1-UD-eXl" secondAttribute="centerY" id="K3N-pL-t4k"/>
-                    <constraint firstItem="Xas-Z2-i4n" firstAttribute="leading" secondItem="itZ-4i-GUV" secondAttribute="trailing" constant="8" id="L5V-Ix-ee2"/>
+                    <constraint firstItem="L4k-8c-Iq3" firstAttribute="centerY" secondItem="Xas-Z2-i4n" secondAttribute="centerY" id="K3N-pL-t4k"/>
+                    <constraint firstItem="Xas-Z2-i4n" firstAttribute="leading" secondItem="rwP-Wg-1xf" secondAttribute="leading" constant="40" id="L5V-Ix-ee2"/>
                     <constraint firstItem="itZ-4i-GUV" firstAttribute="centerY" secondItem="ZgI-Yn-5bj" secondAttribute="centerY" id="NTk-eu-xaJ"/>
-                    <constraint firstItem="ZgI-Yn-5bj" firstAttribute="leading" secondItem="L4k-8c-Iq3" secondAttribute="trailing" constant="20" id="Pdn-JU-e9g"/>
-                    <constraint firstItem="rwP-Wg-1xf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="V4x-hF-pqc"/>
+                    <constraint firstItem="Xas-Z2-i4n" firstAttribute="top" secondItem="rwP-Wg-1xf" secondAttribute="bottom" constant="14" id="Otf-mf-6dg"/>
+                    <constraint firstItem="ZgI-Yn-5bj" firstAttribute="leading" secondItem="L4k-8c-Iq3" secondAttribute="trailing" constant="50" id="Pdn-JU-e9g"/>
+                    <constraint firstItem="rwP-Wg-1xf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="V4x-hF-pqc"/>
                     <constraint firstItem="aVb-xg-1HH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="WdW-i4-mSx"/>
                     <constraint firstItem="ZgI-Yn-5bj" firstAttribute="centerY" secondItem="L4k-8c-Iq3" secondAttribute="centerY" id="Zwa-rA-baI"/>
-                    <constraint firstAttribute="trailing" secondItem="rwP-Wg-1xf" secondAttribute="trailing" constant="5" id="a0j-Pb-r41"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="L4k-8c-Iq3" secondAttribute="bottom" constant="15" id="aa9-lQ-O9j"/>
+                    <constraint firstAttribute="trailing" secondItem="rwP-Wg-1xf" secondAttribute="trailing" id="a0j-Pb-r41"/>
                     <constraint firstAttribute="trailing" secondItem="lTr-0I-WbP" secondAttribute="trailing" constant="15" id="ajl-zS-Xhf"/>
                     <constraint firstItem="lTr-0I-WbP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="bVO-Cp-Sj3"/>
-                    <constraint firstItem="vc1-UD-eXl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="eqf-FU-HeE"/>
+                    <constraint firstItem="vc1-UD-eXl" firstAttribute="leading" secondItem="Xas-Z2-i4n" secondAttribute="trailing" constant="50" id="eqf-FU-HeE"/>
                     <constraint firstItem="L4k-8c-Iq3" firstAttribute="leading" secondItem="vc1-UD-eXl" secondAttribute="trailing" constant="5" id="l8o-Gj-dFf"/>
                     <constraint firstItem="aVb-xg-1HH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="qLU-Ry-7C2"/>
                     <constraint firstItem="rwP-Wg-1xf" firstAttribute="top" secondItem="lTr-0I-WbP" secondAttribute="bottom" constant="15" id="tAC-4D-1FC"/>
@@ -137,8 +137,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icon_news_share" width="14" height="14"/>
-        <image name="icon_news_time" width="14" height="14"/>
-        <image name="icon_news_view" width="14" height="14"/>
+        <image name="icon_add_collection" width="22" height="22"/>
+        <image name="icon_comment_newaa" width="27" height="27"/>
+        <image name="icon_share_new" width="27" height="27"/>
     </resources>
 </document>
